Fixes resource fetch